--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "cu-boulder/ckeditor5_bootstrap_accordion",
     "description": "Insert and edit a Bootstrap 5 accordion in CKEditor 5.",
     "license": "GPL-2.0-or-later",
-    "type": "drupal-module",
+    "type": "drupal-custom-module",
     "minimum-stability": "dev",
     "require": {
         "drupal/core": "^10 || ^11"
